ops/Helm/shortlink-link/common/draft/gateway/external-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: external-gateway
  annotations:
    cert-manager.io/issuer: cert-manager-production
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      hostname: "shortlink.best"
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: shortlink-best-tls
            kind: Secret
            group: core
      allowedRoutes:
        namespaces:
          from: Same
