ops/Helm/shortlink-link/common/draft/gateway/internal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: internal-gateway
  annotations:
    cert-manager.io/issuer: ca-issuer
spec:
  gatewayClassName: istio
  listeners:
    - name: grpc
      port: 50051
      hostname: "*.shortlink"
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            group: ""
            name: self-signed
      allowedRoutes:
        namespaces:
          from: Same
